objects/Opportunity.object
<CustomObject><businessProcesses>
        <fullName>bigdeal</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Id%2E Decision Makers</fullName>
        </values>
        <values>
            <fullName>Needs Analysis</fullName>
        </values>
        <values>
            <fullName>Negotiation%2FReview</fullName>
        </values>
        <values>
            <fullName>Perception Analysis</fullName>
        </values>
        <values>
            <fullName>Proposal%2FPrice Quote</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
        <values>
            <fullName>Value Proposition</fullName>
        </values>
    </businessProcesses><businessProcesses>
        <fullName>smalldeal</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Needs Analysis</fullName>
        </values>
        <values>
            <fullName>Negotiation%2FReview</fullName>
        </values>
        <values>
            <fullName>Proposal%2FPrice Quote</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
    </businessProcesses><fields>
        <fullName>Accumulated_Adjustment__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Accumulated Adjustment to Deal Amounts till closing</description>
        <inlineHelpText>Accumulated Adjustment to Deal Amounts till closing</inlineHelpText>
        <label>Accumulated Adjustment value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Commission__c</fullName>
        <label>Commission</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,"All Opportunity Details Captured", "Missing: "&amp;IF( ISPICKVAL( Type ,""),"Type, ","")&amp;""&amp;IF(LEN( TEXT(MONTH(CloseDate))) = 0, "Close Date, ","")&amp;""&amp;IF( Amount &lt;= 0, "Amount, ","")&amp;""&amp;IF( ISPICKVAL( LeadSource,""), "Lead Source, ","")&amp;""&amp;IF( LEN(NextStep)=0, "Next Steps",""))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( ISPICKVAL(Type,""), 0,20) + IF( LEN( TEXT(MONTH(CloseDate))) = 0, 0,20) + IF( Amount &lt;= 0, 0,20) + IF( ISPICKVAL( LeadSource,""), 0,20) + IF( LEN(NextStep)=0, 0,20)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>DeliveryInstallationStatus__c</fullName>
        <label>Delivery/Installation Status</label>
        <picklist>
            <picklistValues>
                <fullName>In progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yet to begin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>MainCompetitors__c</fullName>
        <label>Main Competitor(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields><fields>
        <fullName>OrderNumber__c</fullName>
        <label>Order Number</label>
        <length>8</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Total_Deal_Adjustments__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total adjustments to the amount by deal owners</description>
        <label>Total Deal Adjustments count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>TrackingNumber__c</fullName>
        <label>Tracking Number</label>
        <length>12</length>
        <type>Text</type>
    </fields><fields>
        <fullName>approval_stage__c</fullName>
        <label>approval_stage</label>
        <picklist>
            <picklistValues>
                <fullName>rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>waiting_on_manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>waiting_on_director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>waiting_on_ceo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>approved</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><enableFeeds>true</enableFeeds><enableHistory>true</enableHistory><recordTypeTrackFeedHistory>false</recordTypeTrackFeedHistory><recordTypeTrackHistory>false</recordTypeTrackHistory><sharingModel>Private</sharingModel><listViews>
        <fullName>AllOpportunities</fullName>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews><listViews>
        <fullName>Closed_10_minus_days</fullName>
        <columns>OPPORTUNITY.RECORDTYPE</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterThan</operation>
            <value>N_DAYS_AGO:10</value>
        </filters>
        <label>Closed 10 minus days</label>
    </listViews><listViews>
        <fullName>Closed_10_plus_days</fullName>
        <columns>OPPORTUNITY.RECORDTYPE</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>lessOrEqual</operation>
            <value>N_DAYS_AGO:10</value>
        </filters>
        <label>Closed 10 plus days</label>
    </listViews><listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews><listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews><listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Commission__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_MONTHS:3</value>
        </filters>
        <label>Deal Pipeline</label>
    </listViews><listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews><listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews><listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews><listViews>
        <fullName>Private</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.PRIVATE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Private</label>
    </listViews><listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews><recordTypes>
        <fullName>UD_BigDeals_Type</fullName>
        <active>true</active>
        <businessProcess>bigdeal</businessProcess>
        <label>UD Deal</label>
    </recordTypes><recordTypes>
        <fullName>UD_Long_Closed_Deal</fullName>
        <active>true</active>
        <businessProcess>bigdeal</businessProcess>
        <description>UD Deal closed after 10 days</description>
        <label>UD Long Closed Deal</label>
    </recordTypes><recordTypes>
        <fullName>UD_Newly_Closed_Deal</fullName>
        <active>true</active>
        <businessProcess>bigdeal</businessProcess>
        <label>UD Newly Closed Deal</label>
    </recordTypes><recordTypes>
        <fullName>bigdeal</fullName>
        <active>true</active>
        <businessProcess>bigdeal</businessProcess>
        <label>bigdeal</label>
    </recordTypes><recordTypes>
        <fullName>test123</fullName>
        <active>true</active>
        <businessProcess>bigdeal</businessProcess>
        <label>test123</label>
    </recordTypes><validationRules>
        <fullName>UD_deal_no_edit_after_close</fullName>
        <active>true</active>
        <description>don't allow edit after deal close</description>
        <errorConditionFormula>AND( 
   PRIORVALUE(IsClosed), 
   $Profile.Name &lt;&gt; "System Administrator",
   NOT(
      AND( 
         PRIORVALUE(CloseDate) &gt;  TODAY() - 10,
         ISCHANGED(Description)
      )
   )
)</errorConditionFormula>
        <errorMessage>Deal is already closed.  You may only edit description within 10 days of close. After 10 days of close, current company rule doesn't allow edit of closed deals.</errorMessage>
    </validationRules></CustomObject>